k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: impromptu-ai
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: impromptu-ai
spec:
  # ClusterIP since it will be exposed via Ingress
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
